# asteroids

./: .gitignore  Cargo.toml  README.md
assets/geogebra/: boss.ggb  circle_intersects_line_segment.ggb  point_in_triangle.ggb  spaceship.ggb  triangles_intersect.ggb
benches/: circle_intersects_line_segment.rs  disk_intersects_line_segment.rs  point_in_triangle.rs
src/: asteroid.rs  blast.rs  boss.rs  camera.rs  collision.rs  compass.rs  component.rs  constant.rs  count.rs  debris.rs  despawn.rs  fire.rs  game_over.rs  game_state.rs  gamestate.rs  health_bar.rs  intercepter.rs  keyboard.rs  keyboard_bindings.rs  lib.rs  light.rs  main.rs  map.rs  objective.rs  spaceship.rs  star.rs  transform.rs  window.rs  wreckage.rs
src/collision/: aftermath.rs  boss.rs  cache.rs  damages.rs  generic.rs  hierarchy.rs  impact.rs  math.rs  mod.rs  old_generic.rs  response.rs
src/collision/detection/: mod.rs  triangle.rs
src/collision/math/: mod.rs  triangle.rs
src/game_state/: main_menu.rs  mod.rs  pause_menu.rs
src/gamestate/: main_menu.rs  mod.rs  pause_menu.rs
src/map/: mod.rs  star.rs
src/old/: count.rs
src/spaceship/: flame.rs  mod.rs
src/ui/: main_menu.rs  mod.rs  pause_menu.rs  settings.rs  settings_menu.rs
tests/: circle_intersects_line_segment.rs  collision.rs  disk_intersects_line_segment.rs  map.rs  point_in_triangle.rs  rectangles_intersect.rs  tests.rs  triangles_intersect.rs
