[package]
name = "asteroids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = "0.8.1"
bevy = { version = "0.9.0", features = ["dynamic", "trace"] }
iyes_loopless = "0.9.1"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "point_in_triangle"
harness = false

[[bench]]
name = "disk_intersects_line_segment"
harness = false